RESOLVED FIXED78502
[Qt] inspector/styles/undo-add-new-rule.html crashes
https://bugs.webkit.org/show_bug.cgi?id=78502
Summary [Qt] inspector/styles/undo-add-new-rule.html crashes
Csaba Osztrogonác
Reported 2012-02-13 09:13:38 PST
inspector/styles/undo-add-new-rule.html introduced in http://trac.webkit.org/changeset/107561
Attachments
Patch (3.19 KB, patch)
2012-02-13 23:36 PST, Pavel Feldman
yurys: review+
Csaba Osztrogonác
Comment 1 2012-02-13 09:17:28 PST
... but crashes on 32 bit QtWebKit (pass on 64 bit) here is the backtrace: $ cat undo-add-new-rule-crash-log.txt | c++filt 1 0x8066ecb /ramdisk/qt-linux-release/build/WebKitBuild/Release/bin/DumpRenderTree() [0x8066ecb] 2 0xf76f7400 [0xf76f7400] 3 0xf5f44527 /ramdisk/qt-linux-release/build/WebKitBuild/Release/lib/libQtWebKit.so.4(WebCore::StylePropertySet::ensureCSSStyleDeclaration() const+0x17) [0xf5f44527] 4 0xf6240922 /ramdisk/qt-linux-release/build/WebKitBuild/Release/lib/libQtWebKit.so.4(WebCore::InspectorStyleSheet::deleteRule(WebCore::InspectorCSSId const&, int&)+0xb2) [0xf6240922] 5 0xf61df13e /ramdisk/qt-linux-release/build/WebKitBuild/Release/lib/libQtWebKit.so.4(WebCore::InspectorCSSAgent::AddRuleAction::undo(int&)+0x2e) [0xf61df13e] 6 0xf621bfb8 /ramdisk/qt-linux-release/build/WebKitBuild/Release/lib/libQtWebKit.so.4(WebCore::InspectorHistory::undo(int&)+0xb8) [0xf621bfb8] 7 0xf620300c /ramdisk/qt-linux-release/build/WebKitBuild/Release/lib/libQtWebKit.so.4(WebCore::InspectorDOMAgent::undo(WTF::String*)+0x3c) [0xf620300c] 8 0xf6ccfbfb /ramdisk/qt-linux-release/build/WebKitBuild/Release/lib/libQtWebKit.so.4(WebCore::InspectorBackendDispatcherImpl::DOM_undo(long, WebCore::InspectorObject*)+0x5b) [0xf6ccfbfb] 9 0xf6cc7946 /ramdisk/qt-linux-release/build/WebKitBuild/Release/lib/libQtWebKit.so.4(WebCore::InspectorBackendDispatcherImpl::dispatch(WTF::String const&)+0x346) [0xf6cc7946] 10 0xf61f09df /ramdisk/qt-linux-release/build/WebKitBuild/Release/lib/libQtWebKit.so.4(WebCore::InspectorController::dispatchMessageFromFrontend(WTF::String const&)+0x1f) [0xf61f09df] 11 0xf6216b43 /ramdisk/qt-linux-release/build/WebKitBuild/Release/lib/libQtWebKit.so.4(WebCore::InspectorBackendDispatchTask::onTimer(WebCore::Timer<WebCore::InspectorBackendDispatchTask>*)+0xf3) [0xf6216b43] 12 0xf6215831 /ramdisk/qt-linux-release/build/WebKitBuild/Release/lib/libQtWebKit.so.4(WebCore::Timer<WebCore::InspectorBackendDispatchTask>::fired()+0x21) [0xf6215831] 13 0xf6429f79 /ramdisk/qt-linux-release/build/WebKitBuild/Release/lib/libQtWebKit.so.4(WebCore::ThreadTimers::sharedTimerFiredInternal()+0xa9) [0xf6429f79] 14 0xf642a055 /ramdisk/qt-linux-release/build/WebKitBuild/Release/lib/libQtWebKit.so.4(WebCore::ThreadTimers::sharedTimerFired()+0x45) [0xf642a055] 15 0xf6623056 /ramdisk/qt-linux-release/build/WebKitBuild/Release/lib/libQtWebKit.so.4(WebCore::SharedTimerQt::timerEvent(QTimerEvent*)+0x46) [0xf6623056] 16 0xf3b354e4 /usr/local/Trolltech/Qt-4.8.0/lib/libQtCore.so.4(QObject::event(QEvent*)+0x84) [0xf3b354e4] 17 0xf3f3ee0c /usr/local/Trolltech/Qt-4.8.0/lib/libQtGui.so.4(QApplicationPrivate::notify_helper(QObject*, QEvent*)+0xac) [0xf3f3ee0c] 18 0xf3f44cc2 /usr/local/Trolltech/Qt-4.8.0/lib/libQtGui.so.4(QApplication::notify(QObject*, QEvent*)+0x162) [0xf3f44cc2] 19 0xf3b221ab /usr/local/Trolltech/Qt-4.8.0/lib/libQtCore.so.4(QCoreApplication::notifyInternal(QObject*, QEvent*)+0x7b) [0xf3b221ab] 20 0xf3b58b87 /usr/local/Trolltech/Qt-4.8.0/lib/libQtCore.so.4(+0x1c5b87) [0xf3b58b87] 21 0xf3b55b6a /usr/local/Trolltech/Qt-4.8.0/lib/libQtCore.so.4(+0x1c2b6a) [0xf3b55b6a] 22 0xf4ec0305 /lib/libglib-2.0.so.0(g_main_context_dispatch+0x1d5) [0xf4ec0305] 23 0xf4ec3fe8 /lib/libglib-2.0.so.0(+0x3efe8) [0xf4ec3fe8] 24 0xf4ec41c8 /lib/libglib-2.0.so.0(g_main_context_iteration+0x68) [0xf4ec41c8] 25 0xf3b55855 /usr/local/Trolltech/Qt-4.8.0/lib/libQtCore.so.4(QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>)+0x65) [0xf3b55855] 26 0xf3ff9775 /usr/local/Trolltech/Qt-4.8.0/lib/libQtGui.so.4(+0x229775) [0xf3ff9775] 27 0xf3b20a69 /usr/local/Trolltech/Qt-4.8.0/lib/libQtCore.so.4(QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>)+0x49) [0xf3b20a69] 28 0xf3b20f72 /usr/local/Trolltech/Qt-4.8.0/lib/libQtCore.so.4(QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>)+0x182) [0xf3b20f72] 29 0xf3b2732f /usr/local/Trolltech/Qt-4.8.0/lib/libQtCore.so.4(QCoreApplication::exec()+0xaf) [0xf3b2732f] 30 0xf3f3de77 /usr/local/Trolltech/Qt-4.8.0/lib/libQtGui.so.4(QApplication::exec()+0x27) [0xf3f3de77] 31 0x8067f81 /ramdisk/qt-linux-release/build/WebKitBuild/Release/bin/DumpRenderTree() [0x8067f81]
Csaba Osztrogonác
Comment 2 2012-02-13 09:23:28 PST
I skipped it until proper fix - http://trac.webkit.org/changeset/107578
Pavel Feldman
Comment 3 2012-02-13 23:33:46 PST
*** Bug 78522 has been marked as a duplicate of this bug. ***
Pavel Feldman
Comment 4 2012-02-13 23:36:57 PST
Pavel Feldman
Comment 5 2012-02-13 23:50:16 PST
Note You need to log in before you can comment on or make changes to this bug.