[Qt] inspector/styles/undo-add-new-rule.html crashes https://bugs.webkit.org/show_bug.cgi?id=78502

Reviewed by Yury Semikhatsky.

Source/WebCore:

* inspector/InspectorStyleSheet.cpp:
(WebCore::InspectorStyleSheet::deleteRule):

LayoutTests:

* platform/chromium/test_expectations.txt:
* platform/qt/Skipped:

Canonical link: https://commits.webkit.org/95523@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107676 268f45cc-cd09-0410-ab3c-d52691b4dbfc